--- a/simonSays.html
+++ b/simonSays.html
@@ -10,11 +10,11 @@
 
 <body>
   <div id="container" style="text-align: center">
-    <input type="button" id="1" style="background-color:green; margin-bottom: 1.5px" />
-    <input type="button" id="2" style="background-color:#dc143c; margin-bottom: 1.5px" />
+    <input type="button" id="1" style="margin-bottom: 1.5px" />
+    <input type="button" id="2" style="margin-bottom: 1.5px" />
     <br>
-    <input type="button" id="3" style="background-color:#ffd700" />
-    <input type="button" id="4" style="background-color:blue" />
+    <input type="button" id="3"/>
+    <input type="button" id="4"/>
     <br>
     <br> 
     <div id="roundsDiv">
